[Employee Controller][Alfred and Prince] feature - get page for employee controller